--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -1,15 +1,13 @@
 # This workflow will upload a Python Package using Twine when a release is created
 # For more information see: https://help.github.com/en/actions/language-and-framework-guides/using-python-with-github-actions#publishing-to-package-registries
 
-name: Upload Python Package
+name: Publish Python distributions to PyPI
 
-on:
-  release:
-    types: [created]
+on: push
 
 jobs:
-  deploy:
-
+  build-n-publish:
+    name: Build and publish package
     runs-on: ubuntu-latest
 
     steps:
@@ -17,15 +15,15 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.x'
-    - name: Install dependencies
+        python-version: 3.8
+    - name: Install pypa/build
       run: |
-        python -m pip install --upgrade pip
-        pip install setuptools wheel twine
-    - name: Build and publish
-      with:
-        user: __token__
-        password: ${{ secrets.PYCFOF_TOKEN_PYPI }}
+        python -m pip install build --user
+    - name: Build a binary wheel and a source tarball
       run: |
         python setup.py sdist bdist_wheel
-        twine upload dist/*
+    - name: Publish
+      if: startsWith(github.ref, 'refs/tags')
+      uses: pypa/gh-action-pypi-publish@master
+      with:
+        password: ${{ secrets.PYCFOF_TOKEN_PYPI }}
