--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -21,6 +21,7 @@ jobs:
         python -m pip install build --user
     - name: Build a binary wheel and a source tarball
       run: |
+        python -m pip install --upgrade pip
         python -m build --sdist --wheel --outdir dist/ .
     - name: Publish
       if: startsWith(github.ref, 'refs/tags')
