--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -46,7 +46,7 @@ jobs:
           python -m twine upload dist/*
         env:
             TWINE_USERNAME: __token__
-            TWINE_PASSWORD: ${{ secrets.PYCFOF_TOKEN_PYPI }}
+            TWINE_PASSWORD: ${{ secrets.TWINE_TOKEN }}
         #if: startsWith(github.ref, 'refs/tags')
         # uses: pypa/gh-action-pypi-publish@master
         # with:
