--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -39,6 +39,12 @@ jobs:
           # Install the package from setup.py
           python setup.py install
 
+      # Tests with unittest
+      - name: Test with unittest
+        run: |
+          cd tests
+          python -m unittest discover
+          cd ..
 
       - name: "Build a binary wheel and a source tarball and uploads to PyPI"
         run: |
@@ -46,7 +52,7 @@ jobs:
           python -m twine upload dist/*
         env:
             TWINE_USERNAME: __token__
-            TWINE_PASSWORD: ${{ secrets.TWINE_TOKEN }}
+            TWINE_PASSWORD: ${{ secrets.PYCFOF_TOKEN_PYPI }}
         #if: startsWith(github.ref, 'refs/tags')
         # uses: pypa/gh-action-pypi-publish@master
         # with:
