--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -39,12 +39,12 @@ jobs:
           # Install the package from setup.py
           python setup.py install
 
-      # Tests with unittest
-      - name: Test with unittest
-        run: |
-          cd tests
-          python -m unittest discover
-          cd ..
+      # # Tests with unittest
+      # - name: Test with unittest
+      #   run: |
+      #     cd tests
+      #     python -m unittest discover
+      #     cd ..
 
       - name: "Build a binary wheel and a source tarball and uploads to PyPI"
         run: |
